fixed spacing

--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -43,19 +43,6 @@ ion-segment {
   border-color: #1A4640;
 }
 
-ion-col.category {
-  background-color: #D9D9D9;
-  border: solid 3px #fff;
-  color: #fff;
-  text-align: center;
-}
-ion-col.a {
-  background-color: #D9D9D9;
-  border: solid 3px #fff;
-  color: #fff;
-  text-align: center;
-}
-
 .category-col img {
   width: 50%;
   object-fit: cover;
